methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: '(' expected but identifier found.
  if front {
     ^MethodsArgs:12: error: illegal start of simple expression
} 
^